2014.07.04 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* use/config.rpath:
	  - Updated to the newer version bundled with gettext-0.18.3.2.
	* acinclude.m4:
	  - Added iconv.m4, lib-{link,ld,prefix}.m4 for Mac OS.
	* autogen.sh:
	  - mkdir m4 if not exist.

2014.06.27 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c, qrencode.1.in:
	  - Merged pull-request #44. (Thanks to Antenore)
	  - Fixed some format issues.

2014.06.22 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrencode.c:
	  - A memory leak bug has been fixed. (Thanks to @win32asm)
	* bitstream.c:
	  - Check return value of BitStream_expand. (PR #46, Thanks to @tklauser)

2014.02.14 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrinput.c:
	  - Minor documentation fix.
	* qrenc.c:
	  - Error message improved.

2014.02.09 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* .travis.yaml:
	  - Configuration file for Travis CI. (Thanks to Danil Dörrhöfer)
	* configure.ac:
	  - Fixed some warnings.

2014.01.15 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c:
	  - Merged pull request 78d44fd - commandline argument --help and -V is
	    printed to stdout, instead of stderr.

2014.01.04 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* rsecc.[ch]:
	  - Code cleanups.

2013.10.27 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrinput.c:
	  - Bug in QRinput_insertFNC1Header() has been fixed. (Thanks to David
	    Binderman)
	* qrinput.c, test/decoder.[ch]:
	  - Code cleanup.

2013.09.08 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* tests/test_qrencode.c:
	  - Small bug fix.

2013.09.06 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c:
	  - bzero() has been replaced with memset(). (Thanks to Gavin Andresen)
	* qrspec.c, qrinput.c:
	  - QRspec_getMinimumVersion() now returns maximum version number for
	    excessive input, instead of -1. Closes #31. (Thanks to Danil
		Dörrhöfer)
	* tests/test_qrencode.c:
	  - New tests for excessive or maximum input have been added.
	* tests/test_qrinput.c:
	  - A deprecatd test has been removed.
	[reduce_malloc]
	* bitstream.c: