@@ -5,6 +5,8 @@
 	  - Added iconv.m4, lib-{link,ld,prefix}.m4 for Mac OS.
 	* autogen.sh:
 	  - mkdir m4 if not exist.
+	* qrencode.h:
+	  - Fixed some doxygen commands.
 
 2014.06.27 Kentaro FUKUCHI <kentaro@fukuchi.org>
 	* qrenc.c, qrencode.1.in:
